--- a/DocspiderTesteUploadDownload/Presentation.DocspiderTesteUploadDownload/Views/Home/CadastroAlteracao.cshtml
+++ b/DocspiderTesteUploadDownload/Presentation.DocspiderTesteUploadDownload/Views/Home/CadastroAlteracao.cshtml
@@ -4,39 +4,88 @@
 @{
     Layout = "~/Views/Shared/Shared.cshtml";
 }
-@{ 
-    var upload = ViewBag.Upload;
-}
-<h1 class="d-flex justify-content-center m-4">Cadastro de Arquivo</h1>
+@{
 
-<form method="post" enctype="multipart/form-data" asp-controller="Home" asp-action="Index">
+    var upload = ViewBag.Upload;
+    var erro = ViewBag.Erro;
+    var erroUpload = ViewBag.ErroArquivo;    
+}
+<h1 class="d-flex justify-content-center m-4">
+    @if (@upload.IdUpload != 0)
+    {
+    <span> Alterar Arquivo </span>
+    }
+    else
+    {
+<span> Cadastrar Arquivo</span>
+    }
+    
+</h1>
+
+<form method="post" enctype="multipart/form-data" class="d-flex flex-column align-items-center">
     <div asp-validation-summary="All"></div>
     <input value="@upload.IdUpload" type="hidden" name="IdUpload" />
-    <div>
-        <label asp-for="Model.Titulo"></label>
-        <div>
-            <label>Titulo</label>
-            <input type="text" class="form-control mb-1" placeholder="Insira um titulo para o seu arquivo (Max 100 Caracteres)" name="Titulo" value="@upload.Titulo" />
-            <span>@Html.ValidationMessageFor(model => model.Titulo)</span>
-        </div>
-        <div>
-            <label>Arquivo</label>
-            <input type="file" class="form-control mb-1" placeholder="Selecione o arquivo que deseja fazer o upload"  name="Arquivo" value="@upload.Arquivo"/>
-            <span>@Html.ValidationMessageFor(model => model.Arquivo)</span>
-        </div>
-        <div>
-            <label>Nome do Arquivo</label>
-            <input type="text" class="form-control mb-1" placeholder="Selecione um nome para o seu arquivo" name="Nome_Do_Arquivo" value="@upload.Nome_Do_Arquivo"/>
-            <span>@Html.ValidationMessageFor(model => model.Nome_Do_Arquivo)</span>
-        </div>
+
+
+    <div style="width: 70%">
+        <label>Titulo</label>
+        <input type="text" class="form-control mb-1" placeholder="Insira um titulo para o seu arquivo (Max 100 Caracteres)" name="Titulo" value="@upload.Titulo" />
+        <span class="text-danger">@Html.ValidationMessageFor(model => model.Titulo)</span>
     </div>
-    <div class="mb-3">
+    <div style="width: 70%; position: relative;" class="fileUpload">
+        <label>Arquivo</label>
+        <input type="file" class="form-control mb-1 file" name="Arquivo" />
+        <div style="position: absolute; top: 23px; left: 8.9rem; width: calc(100% - 141px);">
+            <input type="text" style="border-radius: 0 .25rem .25rem 0; padding-right: 42px;" class="form-control mb-1 inputFileName" placeholder="Selecione um nome para o seu arquivo" name="Nome_Do_Arquivo" value="@upload.Nome_Do_Arquivo" />
+        </div>
+        @if (@upload.IdUpload != 0)
+        {
+        <button type="button" class="btn btn-primary ms-2 btn-lg" 
+                style="position: absolute;
+                top: 24px; 
+                right: -3px; 
+                height: 37px; 
+                padding: 2px 11px; 
+                border-radius: 0 .3rem .3rem 0;"
+                onclick="location.href='@Url.Action("DownloadFile", "Home", new { id = @upload.IdUpload })'">
+                    <i class="fas fa-file-download"></i>
+        </button>
+        }
+        <span class="text-danger">@erroUpload</span>
+    </div>
+
+
+    <div class="mb-3 " style="width: 70%">
         <label>Descrição</label>
         <textarea class="form-control" placeholder="Insira uma descrição (Max 2000 caracteres)" name="Descricao">@upload.Descricao</textarea>
-        <span>@Html.ValidationMessageFor(model => model.Descricao)</span>
+        <span class="text-danger">@Html.ValidationMessageFor(model => model.Descricao)</span>
     </div>
-    <div class="d-flex justify-content-center">
-        <button type="submit" class="btn btn-primary me-2 btn-lg">Salvar</button>
-        <button type="reset" class="btn btn-primary ms-2 btn-lg">Cancelar</button>
+
+    <div class="text-danger">@erro</div>
+
+
+    <div class="d-flex justify-content-between" style="width: 71%;">
+        @if (@upload.IdUpload != 0)
+        {
+            <button type="button" class="btn btn-primary ms-2 btn-lg" onclick="location.href='@Url.Action("Excluir", "Home", new { id = @upload.IdUpload })'"><i class="fas fa-trash"></i></button>
+        }
+        <div class="d-flex">
+            <button type="submit" class="btn btn-primary me-2 btn-lg">Salvar</button>
+            <button type="reset" class="btn btn-primary ms-2 btn-lg" onclick="location.href='@Url.Action("Index","Home")'">Cancelar</button>
+        </div>
     </div>
 </form>
+
+@section scripts{  
+    <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
+
+    <script type="text/javascript">
+        $(function () {
+            $(".file").change(function (e) {
+                $(".inputFileName").val($('input[type=file]').val().split('\\').pop())
+            });
+
+        })
+    </script>
+}
+
