Finalização do Projeto

--- a/DocspiderTesteUploadDownload/Presentation.DocspiderTesteUploadDownload/Views/Home/CadastroAlteracao.cshtml
+++ b/DocspiderTesteUploadDownload/Presentation.DocspiderTesteUploadDownload/Views/Home/CadastroAlteracao.cshtml
@@ -30,7 +30,7 @@
     <div style="width: 70%">
         <label>Titulo</label>
         <input type="text" class="form-control mb-1" placeholder="Insira um titulo para o seu arquivo (Max 100 Caracteres)" name="Titulo" value="@upload.Titulo" />
-        <span class="text-danger">@Html.ValidationMessageFor(model => model.Título)</span>
+        <span class="text-danger">@Html.ValidationMessageFor(model => model.Titulo)</span>
     </div>
     <div style="width: 70%; position: relative;" class="fileUpload">
         <label>Arquivo</label>
